--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,6 +2,7 @@
     <h1>Login para ver piezas Romanticismo</h1>
         <p>Ingresa tu usuario y contraseña:</p>
         <form action="/users/login" method="POST">
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>" >
             <label for="nombre">Nombre de usuario: </label>
             <input type="text" name="nombre" required>
             <label for="passwd">Constraseña: </label>
