--- a/views/piezasRomanticismo.ejs
+++ b/views/piezasRomanticismo.ejs
@@ -34,7 +34,9 @@
                         allowfullscreen>
                     </iframe>
 <%- include('includes/footer.ejs') %>
-<form action="/modulo3/piezasRomanticismo" method="POST"><label for="calificacion"> ¿Cómo
+<form action="/modulo3/piezasRomanticismo" method="POST">
+    <input type="hidden" name="_csrf" value="<%= csrfToken %>" >
+    <label for="calificacion"> ¿Cómo
     puntuarías del 1 al 10 el recital?</label><input type="number" name="calif" required
     min="1" max="10"><input type="submit" value="Enviar_calificacion">
 </form>
