--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -2,6 +2,7 @@
     <h1>Registro de usuarios de piezas Romanticismo</h1>
         <p>Ingresa los datos del nuevo usuario:</p>
         <form action="/users/signup" method="POST">
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>" >
             <label for="nombre">Nombre completo del nuevo usuario: </label>
             <input type="text" name="nombre" required>
             <label for="username">Nombre de usuario: </label>
